<resources>
    <string name="app_name">BuyOnlyBest</string>
    <string name="title_activity_settings">Settings</string>
    <string name="author">Faiq Nadeem</string>
    <string name="company">MicroElab</string>

    <!-- Preference Titles -->
    <string name="messages_header">Buy Only Best</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!--    Working On The Page    !-->
    <string name="work">We Are Working On The Page It Will Be Ready Shortly</string>

    <!--    String from the main page   !-->
    <string name="mobile">Mobile</string>
    <string name="tablet">Tablet</string>
    <string name="laptop">Laptop</string>
    <string name="gaming_laptop">Gaming Laptop</string>
    <string name="pc">PC</string>
    <string name="gaming_pc">Gaming PC</string>
    <string name="support">Support</string>
    <string name="about">About Us</string>
    <string name="more">More Application</string>
    <string name="exit">Exit App</string>
    <string name="feature">Choose Features</string>
    <string name="feature_des">Then Click \t --> GO</string>
    <string name="lahorestore_visit">Visit LahoreStore</string>
    <string name="microelab_visit">Visit MicroElab</string>
    <string name="more_des">These Are The Apps From Our Store. You Will Like These Apps Also.</string>
    <string name="chat">Chat With Us</string>
    <string name="chat_des">Have A Live Chat With Us. Our Best Agent Will Be With You.</string>
    <string name="about_des">We are What You Need. We Understand You, We Believe In Your Ideas</string>
    <string name="other_apps">More Apps</string>
    <string name="microelab_des">MicroElab Industries Gives you the best solutions that solve your problems. We Publish, We Build, We Create </string>
    <string name="web_des">We Provide Web Platforms, Creating, Hosting, Uploading, Migrating, Maintaining</string>
    <string name="industry_des">Industrial Automation &amp; IOT Stuff Is What We Are At Best</string>
    <string name="lahorestore">We Provide LahoreStore</string>
    <string name="lahorestore_des">Pakistan First Online Store With Cheapest Rates From The Market</string>


    <!--    String from the features page   <string name=""></string>     !-->
    <string name="battery">Battery</string>
    <string name="camera">Camera Quality</string>
    <string name="camera_wide">Wide Angle Camera</string>
    <string name="notch">Notch Display</string>
    <string name="display_size">Screen Size</string>
    <string name="finger_print">Finger Print</string>
    <string name="display_ratio">Screen To Body Ratio</string>
    <string name="ram">Better RAM</string>
    <string name="storage">More Storage</string>
    <string name="build">Build Material</string>
    <string name="less">Less Weight</string>
    <string name="slim">More Slim</string>
    <string name="processor">Better Processor</string>
    <string name="android">Android</string>
    <string name="iphone">Iphone</string>
    <string name="windows">Windows</string>
    <string name="mac">Mac OS</string>
    <string name="nvidia">Nvidia</string>
    <string name="amd">AMD</string>
    <string name="radeon">Radeon</string>
    <string name="intel">Intel</string>
    <string name="rtx">RTX</string>
    <string name="gtx">GTX</string>
    <string name="tower">Tower</string>
    <string name="desktop">Desktop</string>



</resources>
