<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/banner_bob"
    tools:context=".AboutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/title"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorAccent"/>


        <TextView
            android:layout_below="@+id/title"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Have A Look What We Do"
            android:textColor="@color/colorAccent"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:layout_toLeftOf="@+id/first"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="15dp"
                    android:layout_margin="20dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/about_des"
                        android:padding="10dp"
                        android:gravity="left"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/first"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    app:cardElevation="15dp"
                    android:layout_centerInParent="true"
                    app:cardCornerRadius="22dp"
                    android:layout_margin="20dp">
                    <ImageView
                        android:src="@drawable/less"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:layout_width="90dp"
                        android:rotation="90"
                        android:padding="10sp"
                        android:layout_height="90dp"/>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_toLeftOf="@+id/first"
                    android:layout_centerInParent="true"
                    app:cardElevation="15dp"
                    app:cardCornerRadius="0dp"
                    android:layout_margin="20dp">
                    <ImageView
                        android:src="@drawable/fawad"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:layout_width="95dp"
                        android:layout_height="95dp"/>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/first"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_toLeftOf="@+id/second"
                    android:layout_centerInParent="true"
                    app:cardElevation="15dp"
                    app:cardCornerRadius="0dp"
                    android:layout_margin="20dp">
                    <ImageView
                        android:src="@drawable/faiq"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:layout_width="95dp"
                        android:layout_height="95dp"/>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/second"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_centerInParent="true"
                    app:cardElevation="15dp"
                    app:cardCornerRadius="0dp"
                    android:layout_margin="20dp">
                    <ImageView
                        android:src="@drawable/naukhaiz"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:layout_width="95dp"
                        android:layout_height="95dp"/>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    app:cardCornerRadius="22dp"
                    app:cardElevation="15dp"
                    android:layout_margin="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:text="we are microelab"
                        android:padding="10dp"
                        android:textAllCaps="true"
                        android:gravity="center"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:textSize="22sp" />
                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:layout_toLeftOf="@+id/first"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="15dp"
                    android:layout_margin="20dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/microelab_des"
                        android:padding="10dp"
                        android:gravity="left"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/first"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_centerInParent="true"
                    app:cardElevation="15dp"
                    app:cardCornerRadius="22dp"
                    android:layout_margin="20dp">
                    <ImageView
                        android:src="@drawable/microelab"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:layout_width="90dp"
                        android:padding="10sp"
                        android:layout_height="90dp"/>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_toLeftOf="@+id/first"
                    android:layout_centerInParent="true"
                    app:cardElevation="15dp"
                    app:cardCornerRadius="22dp"
                    android:layout_margin="20dp">
                    <ImageView
                        android:src="@drawable/android"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:layout_width="90dp"
                        android:padding="10sp"
                        android:layout_height="90dp"/>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/first"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_toLeftOf="@+id/second"
                    android:layout_centerInParent="true"
                    app:cardElevation="15dp"
                    app:cardCornerRadius="22dp"
                    android:layout_margin="20dp">
                    <ImageView
                        android:src="@drawable/iphone"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:layout_width="90dp"
                        android:padding="10sp"
                        android:layout_height="90dp"/>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/second"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_centerInParent="true"
                    app:cardElevation="15dp"
                    app:cardCornerRadius="22dp"
                    android:layout_margin="20dp">
                    <ImageView
                        android:src="@drawable/windows"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:layout_width="90dp"
                        android:padding="10sp"
                        android:layout_height="90dp"/>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <androidx.cardview.widget.CardView
                    android:id="@+id/first"
                    android:layout_alignParentLeft="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_centerInParent="true"
                    app:cardElevation="15dp"
                    app:cardCornerRadius="22dp"
                    android:layout_margin="20dp">
                    <ImageView
                        android:src="@drawable/web_design_square"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:layout_width="100dp"
                        android:padding="10sp"
                        android:layout_height="100dp"/>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_toRightOf="@+id/first"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="15dp"
                    android:layout_margin="20dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/web_des"
                        android:padding="10dp"
                        android:gravity="left"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />
                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    app:cardCornerRadius="22dp"
                    app:cardElevation="15dp"
                    android:layout_margin="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/lahorestore"
                        android:padding="10dp"
                        android:textAllCaps="true"
                        android:gravity="center"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:textSize="22sp" />
                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    app:cardCornerRadius="22dp"
                    app:cardElevation="15dp"
                    android:layout_margin="20dp">
                    <ImageView
                        android:src="@drawable/lahorestore_long"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"/>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:layout_toLeftOf="@+id/first"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="15dp"
                    android:layout_margin="20dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/lahorestore_des"
                        android:padding="10dp"
                        android:gravity="left"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/first"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_centerInParent="true"
                    app:cardElevation="15dp"
                    app:cardCornerRadius="22dp"
                    android:layout_margin="20dp">
                    <ImageView
                        android:src="@drawable/lahorestore_short"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:layout_width="90dp"
                        android:padding="10sp"
                        android:layout_height="90dp"/>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>
